carousel caching under construction

--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -66,9 +66,9 @@
             </div>
           </div>
         </div>
-        <div class="row" id="slick">
+<!--         <div class="row" id="slick">
           {% if carousel %} {% with carousel as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
-        </div>
+        </div> -->
       </div>
       <div class="col-12 order-3 col-lg-6 order-lg-2" id="left">
         <!-- CHARTS -->
