genre & language carousel

--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -1,78 +1,82 @@
-<div class="dope-buttons dope-buttons-c logo">
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      d
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      o
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      p
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      e
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      p
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      o
-    </span>
-  </a>
-  <a class="btn-dope index-link" href="/">
-    <span class="active">
-      d
-    </span>
-  </a>
+<div class="logo">
+  <div class="dope-buttons dope-buttons-c">
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        d
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        o
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        p
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        e
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        p
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        o
+      </span>
+    </a>
+    <a class="btn-dope index-link" href="/">
+      <span class="active">
+        d
+      </span>
+    </a>
+  </div>
 </div>
 <div class="slick-listen">
   <div class="slick-slide">
-    <div class="dope-buttons dope-buttons-c logo d-none">
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          d
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          o
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          p
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          e
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          p
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          o
-        </span>
-      </a>
-      <a class="btn-dope index-link" href="/">
-        <span class="active">
-          d
-        </span>
-      </a>
+    <div class="logo d-none">
+      <div class="dope-buttons dope-buttons-c">
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            d
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            o
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            p
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            e
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            p
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            o
+          </span>
+        </a>
+        <a class="btn-dope index-link" href="/">
+          <span class="active">
+            d
+          </span>
+        </a>
+      </div>
     </div>
   </div>
   {% for episode in results.episodes %}
