--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -4,7 +4,7 @@
       <div class="row dope-results">
         {% for subscription in results.podcasts %}
           {% with subscription.podcast as podcast %}
-            <div class="col-lg-2 col-md-3 col-4 dope-result selectable" data-podid="{{ podcast.podid }}">
+            <div class="col-4 col-md-3 col-lg-2 dope-result selectable" data-podid="{{ podcast.podid }}">
               <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
                 <img class="img-fluid" src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
                   alt="{{ podcast.title }}" />
