--- a/index/templates/language_carousel.html
+++ b/index/templates/language_carousel.html
@@ -1,44 +1,47 @@
-<div class="row">
-  <div class="col-12 px-0">
-    {% with results.languages as languages %}
-      <h1>
-        Most popular by language
-      </h1>
-      <div class="slick">
-        {% for language in languages %}
-          <div class="slick-slide">
-            <a class="slick-link browse-link" href="/search/?language={{ language.selected_language.url_format }}&view=grid">
-              <h1>
-                {{ language.selected_language }}
-              </h1>
-            </a>
-            <div class="dope-results">
-              {% for podcast in language.podcasts %}
-                <div class="col-4 col-lg-2 dope-result">
-                  <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-                    <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-                      alt="{{ podcast.object.title }}" />
-                    <h1>
-                      {{ podcast.object.title }}
-                    </h1>
-                    <h2>
-                      <span class="by">
-                        by
-                      </span>
-                      {{ podcast.object.artist }}
-                    </h2>
-                  </a>
-                </div>
-              {% endfor %}
+{% load cache %}
+{% cache 86400 language_carousel %}
+  <div class="row">
+    <div class="col-12 px-0">
+      {% with results.languages as languages %}
+        <h1>
+          Most popular by language
+        </h1>
+        <div class="slick">
+          {% for language in languages %}
+            <div class="slick-slide">
+              <a class="slick-link browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
+                <h1>
+                  {{ language.language }}
+                </h1>
+              </a>
+              <div class="dope-results">
+                {% for podcast in language.podcasts %}
+                  <div class="col-4 col-lg-2 dope-result">
+                    <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
+                      <img class="img-fluid" src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
+                        alt="{{ podcast.title }}" />
+                      <h1>
+                        {{ podcast.title }}
+                      </h1>
+                      <h2>
+                        <span class="by">
+                          by
+                        </span>
+                        {{ podcast.artist }}
+                      </h2>
+                    </a>
+                  </div>
+                {% endfor %}
+              </div>
+              <a class="slick-link browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
+                <p>
+                  See {% if language.language.n_podcasts > 1 %} all {% endif %} {{ language.language.n_podcasts }} podcast{{ language.language.n_podcasts|pluralize }}
+                </p>
+              </a>            
             </div>
-            <a class="slick-link browse-link" href="/search/?language={{ language.selected_language.url_format }}&view=grid">
-              <p>
-                See {% if language.selected_language.n_podcasts > 1 %} all {% endif %} {{ language.selected_language.n_podcasts }} podcast{{ language.selected_language.n_podcasts|pluralize }}
-              </p>
-            </a>            
-          </div>
-        {% endfor %}
-      </div>
-    {% endwith%}
+          {% endfor %}
+        </div>
+      {% endwith%}
+    </div>
   </div>
-</div>
+{% endcache %}
