--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -9,7 +9,7 @@
           <h1>
             Listen
           </h1>
-          {% with previous as results %}
+          {% with listen as results %}
             {% include "listen.min.html" %}
           {% endwith %}
         </div>
