--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -36,9 +36,9 @@
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Orbitron" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Exo" />
-  <link rel="stylesheet" href="{% static 'bs/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <link rel="stylesheet" href="{% static 'fa/fontawesome-all.min.css' %}" />
-  <link rel="stylesheet" href="{% static 'slick/slick.min.css' %}" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" />
   <link rel="stylesheet" href="{% static 'style.min.css' %}" />
 </head>
 <body class="{% if user.profile.theme %}{{ user.profile.theme }}{% else %}light{% endif %}">
@@ -102,9 +102,10 @@
   <div id="loaders">
     {% include "button-loading.min.html" %}
   </div>
+  <script src="//cdn.jsdelivr.net/npm/lazyload@2.0.0-beta.2/lazyload.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="{% static 'bs/bootstrap.min.js' %}"></script>
-  <script src="{% static 'slick/slick.min.js' %}"></script>
+  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <script src="{% static 'scripts.min.js' %}"></script>
   <script >
     var _paq = _paq || [];
