--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -8,7 +8,7 @@
         {% for podcast in results.podcasts1 %}
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-              <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+              <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
                 alt="{{ podcast.object.title }}" />
               <h1>
                 {{ podcast.object.title }}
@@ -25,7 +25,7 @@
         {% for podcast in results.podcasts2 %}
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-              <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+              <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
                 alt="{{ podcast.object.title }}" />
               <h1>
                 {{ podcast.object.title }}
@@ -42,7 +42,7 @@
         {% for podcast in results.podcasts3 %}
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-              <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+              <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
                 alt="{{ podcast.object.title }}" />
               <h1>
                 {{ podcast.object.title }}
@@ -59,7 +59,7 @@
         {% for podcast in results.podcasts4 %}
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
-              <img class="img-fluid" src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
+              <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
                 alt="{{ podcast.object.title }}" />
               <h1>
                 {{ podcast.object.title }}
