--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -6,7 +6,7 @@
           {% with subscription.podcast as podcast %}
             <div class="col-4 col-md-3 col-lg-2 dope-result selectable" data-podid="{{ podcast.podid }}">
               <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-                <img class="img-fluid" src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
+                <img class="img-fluid lazyload" data-src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
                   alt="{{ podcast.title }}" />
                 <h1>
                   {{ podcast.title }}
