--- a/index/templates/genre_carousel.html
+++ b/index/templates/genre_carousel.html
@@ -18,7 +18,7 @@
                 {% for podcast in genre.podcasts %}
                   <div class="col-4 col-lg-2 dope-result">
                     <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
-                      <img class="img-fluid lazyload" data-src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
+                      <img class="img-fluid" src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
                         alt="{{ podcast.title }}" />
                       <h1>
                         {{ podcast.title }}
