--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -34,7 +34,6 @@
     {% block title %} {% endblock %}
   </title>
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
-  <script async src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
     // load fontawesome asynchronously without blocking page
     var stylesheet = document.createElement("link");
@@ -114,7 +113,7 @@
   <div id="loaders">
     {% include "button-loading.min.html" %}
   </div>
-  <script defer src="//cdn.jsdelivr.net/npm/lazyload@2.0.0-beta.2/lazyload.js"></script>
+  <script async src="//cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.17.0/lazyload.min.js"></script> 
   <script defer src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <script defer src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
