--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -8,7 +8,8 @@
       </div>
       <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
         <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}" />
+          onerror="this.src='//dopepod.me/img/{{ podcast.object.artworkUrl }}100x100bb.jpg'" alt="{{ podcast.object.title }}"
+          width="auto" height="auto" />
       </a>
       <h1>
         <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}" title="{{ podcast.object.title }}">
