--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -9,7 +9,7 @@
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
               <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-                alt="{{ podcast.object.title }}" />
+                alt="{{ podcast.object.title }}" width="auto" height="auto" />
               <h1>
                 {{ podcast.object.title }}
               </h1>
@@ -26,7 +26,7 @@
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
               <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-                alt="{{ podcast.object.title }}" />
+                alt="{{ podcast.object.title }}" width="auto" height="auto" />
               <h1>
                 {{ podcast.object.title }}
               </h1>
@@ -43,7 +43,7 @@
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
               <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-                alt="{{ podcast.object.title }}" />
+                alt="{{ podcast.object.title }}" width="auto" height="auto" />
               <h1>
                 {{ podcast.object.title }}
               </h1>
@@ -60,7 +60,7 @@
           <div class="col-4 col-md-3 col-lg-2 dope-result">
             <a class="showpod-link" data-podid="{{ podcast.object.podid }}" href="{% url 'showpod' podid=podcast.object.podid %}">
               <img class="img-fluid lazyload" data-src="//{{ podcast.object.artworkUrl }}200x200bb.jpg" onerror="this.data-src='//dopepod.me/img/{{ podcast.object.artworkUrl }}200x200bb.jpg'"
-                alt="{{ podcast.object.title }}" />
+                alt="{{ podcast.object.title }}" width="auto" height="auto" />
               <h1>
                 {{ podcast.object.title }}
               </h1>
