--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -7,7 +7,7 @@
             <div class="col-4 col-md-3 col-lg-2 dope-result selectable" data-podid="{{ podcast.podid }}">
               <a class="showpod-link" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}">
                 <img class="img-fluid lazyload" data-src="//{{ podcast.artworkUrl }}200x200bb.jpg" onerror="this.src='//dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg'"
-                  alt="{{ podcast.title }}" />
+                  alt="{{ podcast.title }}" width="auto" height="auto" />
                 <h1>
                   {{ podcast.title }}
                 </h1>
