--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -34,18 +34,8 @@
     {% block title %} {% endblock %}
   </title>
   <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
-  <script>
-    // load fontawesome asynchronously without blocking page
-    var stylesheet = document.createElement("link");
-    stylesheet.href = "{% static 'fa/fontawesome-all.min.css' %}";
-    stylesheet.rel = "stylesheet";
-    stylesheet.type = "text/css";
-    // temporarily set media to something inapplicable to ensure it"ll fetch without blocking render
-    stylesheet.media = "only x";
-    // set the media back when the stylesheet loads
-    stylesheet.onload = function() {stylesheet.media = "all"}
-    document.getElementsByTagName("head")[0].appendChild(stylesheet);
-  </script>
+  <link rel="stylesheet" href="{% static 'fa/fontawesome-all.min.css' %}" media="none" onload="if(media!='all')media='all'">
+  <noscript><link rel="stylesheet" href="{% static 'fa/fontawesome-all.min.css' %}"></noscript>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Orbitron" />
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Exo" />
   <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
