fixed typo in button loader & added more responsive cookie banner removal

--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,11 +1,11 @@
 <div class="cookie-banner color-1">
   <div class="col-12 dope-wrapper">
-    <button class="btn-dope cookie-banner-close float-left" title="Accept">
+    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);" class="btn-dope float-left" title="Accept">
       <span>
         <i class="fas fa-check"></i>
       </span>
     </button>
-    <button class="btn-dope cookie-banner-close float-right" title="Don't Accept">
+    <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);" class="btn-dope float-right" title="Don't Accept">
       <span>
         <i class="fas fa-times"></i>
       </span>
