--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,6 +1,6 @@
 <div class="container position-relative">
   <div class="col-12 col-lg-4 color-1" id="player-wrapper">
-    <div>
+    <div class="player-content">
       <div class="collapse fade" id="player-close-collapse">
         <div class="dope-buttons dope-buttons-c pt-0">
           <p>
@@ -80,13 +80,6 @@
         <source src="{{ episode.url }}"/>
       </audio>        
     </div>
-    <div class="loader">
-      <span class="char char-1">d</span>
-      <span class="char char-2">o</span>
-      <span class="char char-3">p</span>
-      <span class="char char-4">e</span>
-      <span class="char char-5">p</span>
-      <span class="char char-6">o</span>
-    </div>
+    {% include "loader.min.html" %}
   </div>
 </div>
