--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -1,5 +1,5 @@
 {% if results.header %}
-<div class="row results-bar">
+<div class="row results-bar color-1">
   <div class="col-12 px-0">
     {% if results.extra_options %}
       <div class="dope-buttons float-left">
