--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -60,12 +60,5 @@
     </div>
   </div>
 </div>
-<div class="loader">
-  <span class="char char-1">d</span>
-  <span class="char char-2">o</span>
-  <span class="char char-3">p</span>
-  <span class="char char-4">e</span>
-  <span class="char char-5">p</span>
-  <span class="char char-6">o</span>
-</div>
+{% include "loader.min.html" %}
 {% endblock %}
