--- a/index/templates/language_carousel.html
+++ b/index/templates/language_carousel.html
@@ -6,7 +6,7 @@
         <h1>
           Most popular by language
         </h1>
-        <div class="slick">
+        <div class="language-carousel">
           {% for language in languages %}
             <div class="slick-slide">
               <a class="slick-link color-1 browse-link" href="/search/?language={{ language.language.url_format }}&view=grid">
