--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -39,7 +39,7 @@
       </a>
     </div>
   </div>
-  <div class="slick-listen">
+  <div class="listen-carousel">
     <div class="slick-slide">
       <div class="logo d-none">
         <div class="dope-buttons dope-buttons-c">
@@ -200,7 +200,7 @@
   </div>
   <script>
     try {
-      initSlickListen();
+      initListen();
     } catch (e) {
     }
   </script>
