--- a/index/templates/genre_carousel.html
+++ b/index/templates/genre_carousel.html
@@ -6,7 +6,7 @@
         <h1>
           Most popular by genre
         </h1>
-        <div class="slick">
+        <div class="genre-carousel">
           {% for genre in genres %}
             <div class="slick-slide">
               <a class="slick-link color-1 browse-link" href="/search/?genre={{ genre.genre.url_format }}&view=grid">
