--- a/podcasts/templates/cookie_banner.html
+++ b/podcasts/templates/cookie_banner.html
@@ -1,5 +1,5 @@
-<div class="cookie-banner color-1">
-  <div class="col-12 dope-wrapper">
+<div class="cookie-wrapper color-1">
+  <div class="dope-wrapper">
     <button onClick="this.parentNode.parentNode.removeChild(this.parentNode);" class="btn-dope float-left" title="Accept">
       <span>
         <i class="fas fa-check"></i>
