--- a/index/templates/errors.html
+++ b/index/templates/errors.html
@@ -15,7 +15,7 @@
       {% if message %}
         <button class="btn-dope" title="{{ message }}">
           <span class="active">
-            <i class="fas fa-check"></i>
+            <i class="fas fa-times"></i>
           </span>
           <span>
             {{ message }}
