--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -207,7 +207,7 @@
     {% include "errors.min.html" %}
   {% endif %}
   <div class="row">
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 dope-wrapper">
       <a class="dash-wrapper subscriptions-link" href="{% url 'subscriptions' %}">
         <h1>
           Subscriptions
@@ -217,7 +217,7 @@
         </p>
       </a>
     </div>
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 dope-wrapper">
       <a class="dash-wrapper playlist-link" href="{% url 'playlist' %}">
         <h1>
           Playlist
