--- a/podcasts/templates/reviews.html
+++ b/podcasts/templates/reviews.html
@@ -1,4 +1,4 @@
-<div class="col-12 dope-wrapper fade collapse showpod-collapse" id="reviews-collapse">
+<div class="col-12 dope-wrapper fade collapse showpod-collapse">
   <p>
     Coming soon!
   </p>
