--- a/podcasts/templates/reviews.min.html
+++ b/podcasts/templates/reviews.min.html
@@ -1,1 +1,1 @@
-<div class="col-12 dope-wrapper fade collapse showpod-collapse" id="reviews-collapse"><p>Coming soon!</p></div>
+<div class="col-12 dope-wrapper fade collapse showpod-collapse"><p>Coming soon!</p></div>
