reload-button, showpod-collapse fix

--- a/index/templates/loader.html
+++ b/index/templates/loader.html
@@ -8,8 +8,13 @@
     <span class="char char-6">o</span>
   </div>
   {% if results.view %}
-    <a class="reload" href="#" title="Reload">
-
+    <a class="btn-dope reload-button" href="#" title="Reload">
+      <span class="active">
+        Reload
+      </span>
+      <span>
+        <i class="fas fa-sync"></i>
+      </span>
     </a>
   {% endif %}
 </div>
