--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,4 +1,4 @@
-<div class="col-12 px-0 fade collapse showpod-collapse show">
+<div class="col-12 px-0 fade collapse showpod-collapse show" id="episodes-collapse">
   {% if results.episodes %}
     {% include "pagination.min.html" %}
     {% include "episodes-table.min.html" %}
