--- a/podcasts/templates/episodes.min.html
+++ b/podcasts/templates/episodes.min.html
@@ -1,1 +1,1 @@
-<div class="col-12 px-0 fade collapse showpod-collapse show">{% if results.episodes %} {% include "pagination.min.html" %} {% include "episodes-table.min.html" %} {% include "pagination.min.html" %} {% endif %}</div>{% include "loader.min.html" %}
+<div class="col-12 px-0 fade collapse showpod-collapse show" id="episodes-collapse">{% if results.episodes %} {% include "pagination.min.html" %} {% include "episodes-table.min.html" %} {% include "pagination.min.html" %} {% endif %}</div>{% include "loader.min.html" %}
