--- a/index/static/style.css
+++ b/index/static/style.css
@@ -903,6 +903,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   -webkit-transition: -webkit-filter 2s ease;
 }
 .loader {
+  display: none;
   position: absolute;
   top: 0;
   width: 100%;
