--- a/index/static/style.css
+++ b/index/static/style.css
@@ -902,6 +902,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   transition: filter 2s ease;
   -webkit-transition: -webkit-filter 2s ease;
 }
+.player-content.blurred {
+  min-height: unset;
+}
 .loader {
   display: none;
   position: absolute;
@@ -917,8 +920,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   top: 160px;
   width: 84px;
   left: calc(50% - 52px);
-  animation: fadeIn 15s ease .5s forwards;
-  -webkit-animation: fadeIn 15s ease .5s forwards;
+  animation: fadeIn .5s ease 15s forwards;
+  -webkit-animation: fadeIn .5s ease 15s forwards;
 }
 @-webkit-keyframes fadeIn {
   0% {
@@ -1117,6 +1120,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     border-left: none;
     border-right: none;
     border-radius: unset;
+  }
+  .reload-button {
+    left: calc(50% - 42px);
   }
 }
 /* Extra small devices (phones, up to 480px) */
