--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -1,6 +1,6 @@
 {% if results.header %}
-<div class="row results-bar color-1">
-  <div class="col-12 px-0">
+<div class="row">
+  <div class="col-12 results-bar color-4">
     {% if results.extra_options %}
       <div class="dope-buttons float-left">
         <button class="btn-dope results-back" onclick="window.history.back()" title="Back">
