--- a/index/static/style.css
+++ b/index/static/style.css
@@ -236,6 +236,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .color-3 {
   background: rgba(150, 150, 150, .2);
 }
+.color-4 {
+  background: rgba(0, 191, 165);
+}
 
 /* MAIN */
 #main-wrapper {
@@ -253,21 +256,21 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 #previous,
 #charts,
 #search,
-.carousel {
+#popular {
   padding: 30px 0 0;
 }
 #splash {
   padding: 0;
   min-height: 330px;
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
 }
 #splash h1 {
   font-size: 2rem;
   margin-bottom: 40px;
 }
 #splash .dope-result {
-  padding-bottom: 10px;
   border-radius: .25rem;
-  box-shadow: inset rgba(0, 0, 0, .5) 0 0 5px;
+  border: 2px solid rgba(0, 191, 165, .3);
 }
 #splash .dope-result h1,
 #splash .dope-result h2 {
@@ -461,27 +464,19 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 /* SLICK */
-.carousel,
-.search {
+.listen-carousel {
+  display: none;
+}
+.popular-carousel {
+  display: none;
   text-align: center;
 }
-.carousel h1,
-.search h1 {
-  font-size: 22px;
-  margin: 20px 50px;
-} 
-.slick-slide {
-  outline: 0;
-}
-.carousel .dope-results {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+.popular-carousel h1 {
+  font-size: 20px;
+  margin: 25px 0;
 }
 .slick-link {
-  margin: 0 10px 10px;
+  margin: 10px;
   padding: 10px;
   display: block;
   border-radius: .25rem;
@@ -496,11 +491,15 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .slick-prev,
 .slick-next {
   position: absolute;
-  top: -40px;
+  top: -50px;
   z-index: 2000;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
+}
+.popular-carousel .slick-prev,
+.popular-carousel .slick-next {
+  top: -80px;
 }
 .slick-prev {
   left: 10px;
@@ -538,7 +537,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   margin-bottom: 10px;
 }
 #showpod-r ul li:not(:last-child) {
-  border-bottom: 2px solid rgb(0, 191, 165);
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
   margin-bottom: 10px;
 }
 #showpod-c h1 {
@@ -560,7 +559,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .episodes-table {
   table-layout: fixed;
-  margin: 30px 0 0;
+  margin: 30px 00;
 }
 .episodes-table th,
 .episodes-table th,
@@ -570,7 +569,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .episodes-table tr:not(.episode-header),
 .episodes-table thead th {
-  border-bottom: 2px solid rgb(0, 191, 165);
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
 }
 .episode-header {
   cursor: pointer;
@@ -605,14 +604,15 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   overflow: hidden;
 }
 .results-bar {
-  background: rgb(0, 191, 165);
-  border-bottom: 2px solid rgb(0, 191, 165);
+  padding: 0;
+  border-top: 2px solid rgba(0, 191, 165, .3);
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
 }
 .results-bar h1 {
   text-align: center;
   font-size: 18px;
   font-weight: 600;
-  margin: 14px 0;
+  margin: 13px 0;
 }
 
 /* DOPE-LIST */
@@ -638,7 +638,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 /* DOPE-OPTIONS */
 .dope-options {
   padding: 0;
-  border-bottom: 2px solid rgb(0, 191, 165);
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
 }
 .showpod .dope-options {
   border: none;
@@ -656,9 +656,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .dope-result img {
   border-radius: .25rem;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-}
-.dope-result p {
-  margin: 10px 0 0;
 }
 
 /* DOPE-BUTTONS */
@@ -694,7 +691,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 /* CHARTS */
 .charts .dope-result:not(:first-of-type),
 .previous .dope-result:not(:first-of-type) {
-  border-top: 2px solid rgb(0, 191, 165);
+  border-top: 2px solid rgba(0, 191, 165, .3);
 }
 #splash .dope-result img,
 .charts .dope-result img {
@@ -765,6 +762,11 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 /* SEARCH RESULTS */
 .dope-results {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 10px 0 0 10px;
 }
 .dope-results a {
@@ -806,7 +808,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   border-bottom: 2px solid rgba(0, 191, 165, 0);
 }
 .dope-results ul li a:hover {
-  border-bottom: 2px solid rgb(0, 191, 165);
+  border-bottom: 2px solid rgba(0, 191, 165, .3);
 }
 
 /* SUBSCRIPTIONS */
