--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="listen-carousel">
-    <div class="slick-slide">
+    <div>
       <div class="logo d-none">
         <div class="dope-buttons dope-buttons-c">
           <a class="btn-dope index-link" href="/">
@@ -82,12 +82,11 @@
       </div>
     </div>
     {% for episode in results.episodes %}
-      <div class="slick-slide">
-        <div class="dope-result color-3 expandable">
+      <div>
+        <div class="dope-result color-3 expandable clearfix">
           <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
             title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
-            <img class="img-fluid lazyload" data-src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'"
-              width="auto" height="auto" />
+            <img class="img-fluid" data-lazy="//{{ episode.podcast.artworkUrl }}100x100bb.jpg" onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" width="100" height="100" />
           </a>      
           <h1>
             <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}"
